test/should-fail/vsgc1025.f3
/*
 * @test/compile-error
 */

function f() {}
f(4);

function m( i:Integer) {}
m(true);
